# tide-openidconnect

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml
examples/: auth0.rs  azure.rs
src/: isahc.rs  lib.rs  middleware.rs  redirect_strategy.rs  request_ext.rs  route_ext.rs  tests.rs
tests/: middleware.rs  route_ext.rs
tests/common/: authorizeurl.rs  cookiejar.rs  mod.rs  oidc_emulator.rs
