[package]
name = "tide-openidconnect"
version = "0.1.0"
authors = ["Michael Alyn Miller <malyn@strangeGizmo.com>"]
edition = "2018"
publish = false

[dependencies]
bytes = "1"
futures-lite = "1.11"
http = "0.2"
isahc = "1.4.0"
openidconnect = {version = "2.0.1", default-features = false }
serde = "1.0.125"
tide = { version = "0.16.0", default-features = false, features = ["cookies", "sessions"] }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tide-testing = "0.1"
