[package]
name = "tide-openidconnect"
version = "0.1.0"
authors = ["Michael Alyn Miller <malyn@strangeGizmo.com>"]
edition = "2018"
publish = false

[dependencies]
futures-lite = "1.11"
http = "0.2"
isahc = "1.4.0"
once_cell = "1.7.2"
openidconnect = { version = "2.0.1", default-features = false }
serde = "1.0.125"
thiserror = "1.0"
tide = { version = "0.16.0", default-features = false, features = ["sessions"] }

[dev-dependencies]
async-lock = "2.4.0"
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4"
config = "0.11.0"
dotenv = "0.15.0"
serde_json = "1.0"
surf = "2.2.0"
tide = "0.16.0"
tide-testing = "0.1"
time = "0.2.27"