[package]
name = "tide-openidconnect"
version = "0.2.0"
authors = ["Michael Alyn Miller <malyn@strangeGizmo.com>"]
description = "OpenID Connect middleware for Tide"
keywords = ["tide", "openid", "authentication"]
categories = ["authentication", "web-programming", "web-programming::http-server"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/malyn/tide-openidconnect"
exclude = [ ".editorconfig", ".gitattributes", ".github", ".gitignore" ]

[dependencies]
futures-lite = "1"
http = "0.2"
isahc = "1"
once_cell = "1"
openidconnect = { version = "^3.3", default-features = false }
serde = "1.0"
thiserror = "1.0"
tide = { version = "0.16", default-features = false, features = ["sessions"] }

[dev-dependencies]
async-lock = "2.4.0"
async-std = { version = "1.12", features = ["attributes"] }
chrono = "0.4"
config = "0.11.0"
dotenv = "0.15.0"
http-types = "2.11.1"
portpicker = "0.1.1"
serde_json = "1.0"
surf = "2.2.0"
tide = "0.16.0"
tide-testing = "0.1"
time = "0.2.27"
uuid = { version = "^1.4", features = ["v4"] }
